...
import com.divinelink.core.designsystem.theme.AppTheme
import com.divinelink.core.designsystem.theme.dimensions
import com.divinelink.core.designsystem.theme.shape
import com.divinelink.core.model.media.MediaItem
import com.divinelink.ui.R as uiR

const val MOVIE_BOTTOM_SHEET_TAG = "MOVIE_DETAILS_BOTTOM_SHEET_TAG"
const val DETAILS_BUTTON_TAG = "DETAILS_AND_MORE_BUTTON_TAG"
const val BOTTOM_SHEET_MARK_AS_FAVORITE = "MARK_AS_FAVORITE_BUTTON"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun ModalBottomSheetMovieContent(
  sheetState: SheetState = rememberModalBottomSheetState(),
...
