...
import com.divinelink.core.designsystem.theme.dimensions
import com.divinelink.core.model.media.MediaItem
import com.divinelink.ui.FavoriteButton
import com.divinelink.ui.MediaRatingItem
import com.divinelink.ui.MovieImage

const val MOVIE_CARD_ITEM_TAG = "MOVIE_CARD_ITEM_TAG"

@Composable
fun MediaItem(
  modifier: Modifier = Modifier,
  movie: MediaItem.Media,
  onMovieItemClick: (MediaItem.Media) -> Unit,
...
