...
 * @param modifier The modifier to be applied to the filter bar.
 * @param filters The list of filters to display.
 * @param onFilterClick A callback that will be called when a filter is clicked.
 * @param onClearClick A callback that will be called when the clear button is clicked.
 */

const val FILTER_BAR_TEST_TAG = "FILTER_BAR"

@OptIn(ExperimentalFoundationApi::class)
@Composable
fun FilterBar(
  modifier: Modifier = Modifier,
  filters: List<Filter>,
...
